<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog_add_log"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/style_border_dialog">   
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <TextView 
    android:id="@+id/tv_dialog_add_log"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/place_remark"/>    
   </LinearLayout>   
   <LinearLayout 
    android:id="@+id/layout_dialog_add_log_divider1"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"
    android:orientation="vertical"/> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <TextView 
    android:id="@+id/tv_dialog_place"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/place"/> 
   <EditText 
    android:id="@+id/et_dialog_place"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingRight="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/app_name"
    android:hint="@null"
    android:background="@null"/>    
   </LinearLayout>  
   <LinearLayout 
    android:id="@+id/layout_dialog_add_log_divider2"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"
    android:orientation="vertical"/> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <TextView 
    android:id="@+id/tv_dialog_remark"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/remark"/> 
   <EditText 
    android:id="@+id/et_dialog_remark"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingRight="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:hint="@null"
    android:background="@null"/>    
   </LinearLayout>  
   <LinearLayout 
    android:id="@+id/layout_dialog_add_log_divider3"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"
    android:orientation="vertical"/>   
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
   <TextView 
    android:id="@+id/tv_dialog_add_log_ok"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:padding="10dip"
    android:layout_gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/ok"/>   
   <TextView 
    android:id="@+id/tv_dialog_add_log_cancel"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:gravity="center"
    android:padding="10dip"
    android:textColor="#45be45"
    android:textSize="18sp"  
    android:text="@string/cancel"/>     
   </LinearLayout>      
</LinearLayout>
