<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog_accuracy"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/style_border_dialog">   
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
   <TextView 
    android:id="@+id/tv_dialog_custom_accuracy"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/accuracy_remind_title"/>    
   </LinearLayout>   
   <LinearLayout 
    android:id="@+id/layout_dialog_accuracy_divider1"
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"
    android:orientation="vertical"/>
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
   <EditText 
    android:id="@+id/et_dialog_accuracy"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    android:gravity="center"
    android:inputType="numberDecimal"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/app_name"
    android:background="@null"/>    
   </LinearLayout>  
   <LinearLayout
    android:id="@+id/layout_dialog_accuracy_divider2" 
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"
    android:orientation="vertical"/>  
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"> 
   <TextView 
    android:id="@+id/tv_dialog_accuracy_ok"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:padding="10dip"
    android:layout_gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/ok"/>   
   <TextView 
    android:id="@+id/tv_dialog_accuracy_cancel"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:gravity="center"
    android:padding="10dip"
    android:textColor="#45be45"
    android:textSize="18sp"  
    android:text="@string/cancel"/>     
   </LinearLayout>      
</LinearLayout>
