<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_mainpage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
   <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">     
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">  
   <TextView 
    android:id="@+id/tv_satellite_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="10dip"
    android:layout_marginLeft="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="16sp"
    android:text="@string/satellite_number"/>       
   <TextView 
    android:id="@+id/tv_gps_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dip"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:textColor="#636363"
    android:textSize="15sp"
    android:text="@string/zero"/>  
   </RelativeLayout>    
   <LinearLayout 
    android:id="@+id/layout_mainpage_divider1"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:drawable="@drawable/divider_default"
    android:orientation="vertical"/>
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">  
   <TextView 
    android:id="@+id/tv_satellite_altitude"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="10dip"
    android:layout_marginLeft="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="16sp"
    android:text="@string/altitude"/>       
   <TextView 
    android:id="@+id/tv_gps_altitude"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="10dip"
    android:textColor="#636363"
    android:textSize="15sp"
    android:text="@string/zero"/>  
   </RelativeLayout>  
   <LinearLayout 
    android:id="@+id/layout_mainpage_divider2"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:drawable="@drawable/divider_default"
    android:orientation="vertical"/> 
   <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">  
   <TextView 
    android:id="@+id/tv_satellite_accuracy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip"
    android:layout_marginLeft="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="16sp"
    android:text="@string/satellite_accuracy"/>       
   <TextView 
    android:id="@+id/tv_gps_accuracy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:layout_marginRight="10dip"
    android:textColor="#636363"
    android:textSize="15sp"
    android:text="@string/zero"/>  
   </RelativeLayout>   
   <LinearLayout 
    android:id="@+id/layout_mainpage_divider3"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:drawable="@drawable/divider_default"
    android:orientation="vertical"/>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:orientation="horizontal">
   <TextView 
    android:id="@+id/tv_latitude"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginLeft="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/latitude"/>
   <EditText 
    android:id="@+id/et_latitude"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:layout_marginRight="20dip"
    android:gravity="center"
    android:textColor="#000000"
    android:textSize="18sp"
    android:hint="@null"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:background="@null"/>      
   </LinearLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip"
    android:orientation="horizontal">
   <TextView 
    android:id="@+id/tv_longitude"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_marginLeft="10dip"
    android:gravity="center"
    android:textColor="#282828"
    android:textSize="18sp"
    android:text="@string/longitude"/>
   <EditText 
    android:id="@+id/et_longitude"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    android:layout_marginRight="20dip"
    android:gravity="center"
    android:textColor="#000000"
    android:textSize="18sp"
    android:hint="@null"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:background="@null"/>      
   </LinearLayout> 
   <LinearLayout 
    android:id="@+id/layout_mainpage_divider4"
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:drawable="@drawable/divider_default"
    android:orientation="vertical"/> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
   <Button 
    android:id="@+id/btn_send_position"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"
    android:gravity="center"
    android:padding="5dip"
    android:textColor="#f8f8f8"
    android:textSize="16sp"
    android:text="@string/send_position"
    android:background="@drawable/style_button_circle_red"/>
   <Button 
    android:id="@+id/btn_copy_position"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"  
    android:gravity="center"
    android:padding="5dip"
    android:textColor="#f8f8f8"
    android:textSize="16sp"
    android:text="@string/copy_position"
    android:background="@drawable/style_button_circle_green"/> 
   <Button 
    android:id="@+id/btn_copy_to_paste"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip" 
    android:gravity="center"
    android:padding="5dip"
    android:textColor="#f8f8f8"
    android:textSize="16sp"
    android:text="@string/copy_to_paster"
    android:background="@drawable/style_button_circle_yellow"/>
   <Button 
    android:id="@+id/btn_add_log"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"  
    android:gravity="center"
    android:padding="5dip"
    android:textColor="#f8f8f8"
    android:textSize="16sp"
    android:text="@string/add_log"
    android:background="@drawable/style_button_circle_blue"/>
   <Button 
    android:id="@+id/btn_launch_map"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dip"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip" 
    android:layout_marginBottom="20dip" 
    android:gravity="center"
    android:padding="5dip"
    android:textColor="#f8f8f8"
    android:textSize="16sp"
    android:text="@string/launch_map"
    android:background="@drawable/style_button_circle_blue2"/>
   </LinearLayout>
   </LinearLayout>
   </ScrollView>
</LinearLayout>