<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dip"
    android:layout_marginRight="50dip"
    android:orientation="vertical">    
   <TextView 
    android:id="@+id/tv_sms_copy"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:padding="10dip"
    android:textColor="#353535"
    android:textSize="20sp"
    android:text="@string/copy"
    android:background="@drawable/background_me"/>  
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:background="@drawable/divider_light"/>  
    <TextView 
    android:id="@+id/tv_sms_delete"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:padding="10dip"
    android:textColor="#353535"
    android:textSize="20sp"
    android:text="@string/delete"
    android:background="@drawable/background_me"/>  
   <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:background="@drawable/divider_light"/>  
   <TextView 
    android:id="@+id/tv_sms_cancel"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:padding="10dip"
    android:textColor="#353535"
    android:textSize="20sp"
    android:text="@string/cancel"
    android:background="@drawable/background_me"/>    
</LinearLayout>