<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/theme_default">
   <RelativeLayout 
    android:id="@+id/layout_title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"    
    android:background="@drawable/titlebar_default">
   <TextView 
    android:id="@+id/tv_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginTop="5dip"
    android:layout_marginBottom="5dip"
    android:textColor="#ffffff"
    android:textSize="20sp"
    android:text="@string/app_name"/>   
   </RelativeLayout> 
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dip"
    android:layout_marginBottom="5dip"
    android:orientation="horizontal">
   <TextView 
    android:id="@+id/tv_mainpage"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="5dip"
    android:textColor="#45be45"
    android:textSize="20sp"
    android:text="@string/main_page"/>  
   <TextView 
    android:id="@+id/tv_setting"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="5dip"
    android:textSize="20sp"
    android:text="@string/setting"/> 
   </LinearLayout> 
   <ImageView  
    android:id="@+id/iv_cursor"  
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content" 
	android:contentDescription="@null" 
    android:scaleType="matrix"  
    android:src="@drawable/slider" />  
   <LinearLayout 
    android:id="@+id/layout_main_divider"
    android:layout_width="fill_parent"
    android:layout_height="1dip"
    android:orientation="vertical"
    android:background="#cbcbcb">
   </LinearLayout>
   <android.support.v4.view.ViewPager  
    android:id="@+id/viewpager"  
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content"  
    android:layout_gravity="center" >   
   <android.support.v4.view.PagerTabStrip    
    android:id="@+id/pagertab"    
    android:layout_width="wrap_content"    
    android:layout_height="0dip"    
    android:layout_gravity="top"/>          
   </android.support.v4.view.ViewPager>  


</LinearLayout>
