<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    android:gravity="center_horizontal"  
    android:orientation="vertical">  
   <LinearLayout   
    android:id="@+id/layout_share_map_pop"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    android:gravity="center_horizontal"  
    android:orientation="vertical"  
    android:layout_alignParentBottom="true"  
    android:background="@drawable/style_border_dialog">     
   <RelativeLayout 
    android:id="@+id/layout_share_map_send_position"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_item2" 
    android:orientation="horizontal">      
   <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="20dip"
    android:contentDescription="@null"
    android:background="#00000000"
    android:src="@drawable/icon_message"/>
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:text="@string/send_position"
    android:textColor="#282828"
    android:textSize="20sp"/>   
   </RelativeLayout>
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"/>    
   <RelativeLayout 
    android:id="@+id/layout_share_map_copy_position"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_item2" 
    android:orientation="horizontal">      
   <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="20dip"
    android:contentDescription="@null"
    android:background="#00000000"
    android:src="@drawable/icon_wechat"/>
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:text="@string/copy_position"
    android:textColor="#282828"
    android:textSize="20sp"/>   
   </RelativeLayout>      
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"/>   
   <RelativeLayout 
    android:id="@+id/layout_share_map_cpoy_to_paster"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_item2" 
    android:orientation="horizontal">      
   <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="20dip"
    android:contentDescription="@null"
    android:background="#00000000"
    android:src="@drawable/icon_paster"/>
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:text="@string/copy_to_paster"
    android:textColor="#282828"
    android:textSize="20sp"/>   
   </RelativeLayout>      
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"/>   
   <RelativeLayout 
    android:id="@+id/layout_share_map_add_log"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_item2" 
    android:orientation="horizontal">      
   <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:paddingTop="10dip"
    android:paddingBottom="10dip"
    android:paddingLeft="20dip"
    android:contentDescription="@null"
    android:background="#00000000"
    android:src="@drawable/icon_addlog"/>
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:gravity="center"
    android:text="@string/add_log"
    android:textColor="#282828"
    android:textSize="20sp"/>   
   </RelativeLayout>      
   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="1dip"
    android:background="#cbcbcb"/>  
   <LinearLayout 
    android:id="@+id/layout_share_map_cancel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_item2"
    android:orientation="vertical">  
   <TextView 
    android:layout_width="match_parent"  
    android:layout_height="wrap_content" 
    android:layout_marginTop="20dip"   
    android:layout_marginBottom="20dip"  
    android:gravity="center"
    android:textColor="#45be45" 
    android:textSize="20sp" 
    android:text="@string/cancel"/>  
   </LinearLayout>
</LinearLayout>  
</RelativeLayout>  